--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,6 +20,7 @@ jobs:
         run: npm run test
 
   deploy:
+    needs: test-frontend
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
