Added multiple events in action

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - 'basic-react-github-workflow'
+  workflow_dispatch:
+    branches:
+      - 'basic-react-github-workflow'
 
 jobs:
   test-frontend:
