Added output workflow

--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -2,7 +2,7 @@ name: Output Information
 on:
   workflow_dispatch:
     branches:
-      - 'basic-react-github-workflow'
+      - basic-react-github-workflow
 jobs:
   info:
     runs-on: ubuntu-latest
