--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -1,8 +1,5 @@
 name: Output Information
-on:
-  workflow_dispatch:
-    branches:
-      - basic-react-github-workflow
+on: workflow_dispatch
 jobs:
   info:
     runs-on: ubuntu-latest
