Made changes in action files

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,11 +1,5 @@
 name: Deploy Project
-on:
-  push:
-    branches:
-      - 'basic-react-github-workflow'
-  workflow_dispatch:
-    branches:
-      - 'basic-react-github-workflow'
+on: [push, workflow_dispatch]
 
 jobs:
   test-frontend:
