Added eslint file and added github actions

--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -1,8 +1,9 @@
-name: Output Information
+name: Logging meta information
 on: workflow_dispatch
+
 jobs:
-  info:
-    runs-on: ubuntu-latest
+  output-information:
+    runs-on: unbuntu-latest
     steps:
-      - name: Output Github context
+      - name: Output Github Context
         run: echo "${{ toJSON(github) }}"
