--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,6 +17,7 @@ jobs:
         run: npm run lint
   test:
     runs-on: ubuntu-latest
+    needs: linting
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -30,6 +31,7 @@ jobs:
         run: npm run test
   deploy:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Deploying artifact to Server
         run: echo "Releasing to Production..."
