--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,9 +29,23 @@ jobs:
         run: npm install
       - name: Run frontend tests
         run: npm run test
-  deploy:
+  build:
     runs-on: ubuntu-latest
     needs: test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Installing node version
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Installing all project dependencies
+        run: npm i
+      - name: Building Project
+        run: npm run build
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Deploying artifact to Server
         run: echo "Releasing to Production..."
