--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,34 +1,51 @@
-name: Deploy Project
+name: Project Deployment
 on: [push, workflow_dispatch]
 
 jobs:
-  test-frontend:
+  linting:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v3
-      - name: Install Latest Node JS
+      - name: Installing node version
         uses: actions/setup-node@v3
         with:
           node-version: 18
-      - name: Install Dependencies
-        run: npm ci
-      - name: Run Frontend tests
+      - name: Installing dependencies
+        run: npm install
+      - name: Running lint step
+        run: npm run lint
+  test:
+    runs-on: ubuntu-latest
+    needs: linting
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Installing node version
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Installing Dependencies
+        run: npm install
+      - name: Run frontend tests
         run: npm run test
-
-  deploy:
-    needs: test-frontend
+  build:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Install Latest Node JS
+      - name: Installing node version
         uses: actions/setup-node@v3
         with:
           node-version: 18
-      - name: Install Dependencies
-        run: npm ci
-      - name: Build Project
+      - name: Installing all project dependencies
+        run: npm i
+      - name: Building Project
         run: npm run build
-      - name: Deploy
-        run: echo "Deploying... build artifact to Cloud"
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploying artifact to Server
+        run: echo "Releasing to Production..."
